FIX: Texts Changed
Texts are changed

--- a/src/contact.twig
+++ b/src/contact.twig
@@ -125,11 +125,11 @@
                                     </li>
                                     <li>
                                         <span class="label">Telefon</span>
-                                        <a href="tell://0090212000000">+971 4 294 1392</a>
+                                        <a href="tell://0090212000000">+ 0 (212) 963 18 06</a>
                                     </li>
                                     <li>
                                         <span class="label">Adres</span>
-                                        <a href="ajavascript:;">Business Center,Street # 8, 25th Flooer, Near Deira City Centre Dubai - Dubai - United Arab Emirates</a>
+                                        <a href="ajavascript:;">St. Sheikh Zayed 13/5 ,Podgorica, Montenegro  / The Capital Plaza</a>
                                     </li>
                                 </ul>
 
