--- a/src/invest-tools-exchanges.twig
+++ b/src/invest-tools-exchanges.twig
@@ -33,8 +33,7 @@
                     <div class="section-title text-center">
                         <h2>Borsa Endeksi Canlı Fiyat Akışı</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            Tüm Borsa ürünlerinin canlı fiyat akışlarını takip ederek piyasalardan sürekli haberdar olabilirsiniz.
                         </p>
                     </div>
                 </div>
