--- a/src/account-types.twig
+++ b/src/account-types.twig
@@ -14,7 +14,7 @@
                         <div class="section-title">
                             <h2>Hesap Türleri</h2>
                             <p>
-                                ÇarşıFX Global Markets, İstediğiniz her seviyede işlem yapmak için gerekli olan tüm esnekliği size sağlar.Her hesap türünde size sağlanan premium hizmetleri KaleFx’te bulabilirsiniz.
+                                ÇARŞIFX Global Markets, İstediğiniz her seviyede işlem yapmak için gerekli olan tüm esnekliği size sağlar.Her hesap türünde size sağlanan premium hizmetleri ÇARŞIFX’te bulabilirsiniz.
                             </p>
                         </div>
 
@@ -32,9 +32,9 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="section-title text-center">
-                        <h2>Lorem ipsum dolar sit amet</h2>
+                        <h2>Hesap Türleri</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            Aşağıda bulunan hesap türlerini inceleyerek size uygun olan hesabı ÇARŞIFX'te kolaylıkla açabilirsiniz
                         </p>
                     </div>
                 </div>
@@ -78,10 +78,6 @@
                                     <li>
                                         <i class="feature-icon" data-feather="check"></i>
                                         7 Gün / 24 Saat
-                                    </li>
-                                    <li>
-                                        <i class="feature-icon" data-feather="check"></i>
-                                        <strong>%40</strong> Hoş geldin
                                     </li>
                                 </ul>
                             </div>
@@ -134,10 +130,6 @@
                                         <i class="feature-icon" data-feather="check"></i>
                                         7 Gün / 24 Saat
                                     </li>
-                                    <li>
-                                        <i class="feature-icon" data-feather="check"></i>
-                                        <strong>%40</strong> Hoş geldin
-                                    </li>
                                 </ul>
                             </div>
 
@@ -189,10 +181,6 @@
                                     <li>
                                         <i class="feature-icon" data-feather="check"></i>
                                         7 Gün / 24 Saat
-                                    </li>
-                                    <li>
-                                        <i class="feature-icon" data-feather="check"></i>
-                                        <strong>%40</strong> Hoş geldin
                                     </li>
                                 </ul>
                             </div>
