--- a/src/invest-tools-metals.twig
+++ b/src/invest-tools-metals.twig
@@ -38,8 +38,7 @@
                     <div class="section-title text-center">
                         <h2>Metaller Canlı Fiyat Akışı</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            Tüm metallerin canlı fiyat akışlarını takip ederek piyasalardan sürekli haberdar olabilirsiniz.
                         </p>
                     </div>
                 </div>
