--- a/src/platforms.twig
+++ b/src/platforms.twig
@@ -102,7 +102,7 @@
                     <div class="section-title text-center">
                         <h2>Platform Özellikleri</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud                        </p>
+                            Kusursuz bir yatırım deneyimi, işlevsellik, gelişmiş grafikler, hız ve performans ÇarşıFX Forex işlem platformlarında.</p>
                     </div>
 
                 </div>
@@ -129,10 +129,39 @@
                 <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                     <div class="icon-box">
                         <div class="icon">
-                            <img src="images/icon_5-24_acik_piyasa.svg" class="img-fluid" alt="5/24 Açık Piyasa" />
+                            <img src="images/icon_kolay_hizli_islemler.svg" class="img-fluid" alt="5/24 Açık Piyasa" />
                         </div>
                         <div class="title">
-                            Tüm platformlarda tek şifre
+                            Kolay ve hızlı işlemler
+                        </div>
+                        <div class="description">
+                            Kullanıcı dostu arayüzümüz ile kolay ve hızlı işlemler yaparak kazanç
+                            sağlayın.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                    <div class="icon-box">
+                        <div class="icon">
+                            <img src="images/icon_free_forex_sinyalleri.svg" class="img-fluid" alt="5/24 Açık Piyasa" />
+                        </div>
+                        <div class="title">
+                            Ücretsiz forex sinyalleri
+                        </div>
+                        <div class="description">
+                            Uzman analistlerimizin hazırladığı başarı oranı %85 olan forex sinyalleri ile yatırımlarınıza yön verin.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                    <div class="icon-box">
+                        <div class="icon">
+                            <img src="images/icon_acik_pozisyon_takibi.svg" class="img-fluid" alt="5/24 Açık Piyasa" />
+                        </div>
+                        <div class="title">
+                            Emir ve açık pozisyon takibi
                         </div>
                         <div class="description">
                             Bu piyasa uyumuyor; hafta içi 5 gün 24 saat, günün her anında kaldıraçlı yatırım
@@ -144,14 +173,14 @@
                 <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                     <div class="icon-box">
                         <div class="icon">
-                            <img src="images/icon_5-24_acik_piyasa.svg" class="img-fluid" alt="5/24 Açık Piyasa" />
+                            <img src="images/icon_cift_yonlu_yatirim_imkani.svg" class="img-fluid" alt="5/24 Açık Piyasa" />
                         </div>
                         <div class="title">
-                            Tüm platformlarda tek şifre
+                            Çift yönlü yatırım imkanı
                         </div>
                         <div class="description">
-                            Bu piyasa uyumuyor; hafta içi 5 gün 24 saat, günün her anında kaldıraçlı yatırım
-                            işlemleri yapın.
+                            Sadece yükseliş hareketlerinden değil, Düşüş hareketlerinden de kazanç
+                            elde edebilirsiniz.
                         </div>
                     </div>
                 </div>
@@ -159,44 +188,13 @@
                 <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                     <div class="icon-box">
                         <div class="icon">
-                            <img src="images/icon_5-24_acik_piyasa.svg" class="img-fluid" alt="5/24 Açık Piyasa" />
+                            <img src="images/icon_40tan_fazla_yatirim_imkani.svg" class="img-fluid" alt="5/24 Açık Piyasa" />
                         </div>
                         <div class="title">
-                            Tüm platformlarda tek şifre
+                            40 dan fazla yatırım imkanı
                         </div>
                         <div class="description">
-                            Bu piyasa uyumuyor; hafta içi 5 gün 24 saat, günün her anında kaldıraçlı yatırım
-                            işlemleri yapın.
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                    <div class="icon-box">
-                        <div class="icon">
-                            <img src="images/icon_5-24_acik_piyasa.svg" class="img-fluid" alt="5/24 Açık Piyasa" />
-                        </div>
-                        <div class="title">
-                            Tüm platformlarda tek şifre
-                        </div>
-                        <div class="description">
-                            Bu piyasa uyumuyor; hafta içi 5 gün 24 saat, günün her anında kaldıraçlı yatırım
-                            işlemleri yapın.
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                    <div class="icon-box">
-                        <div class="icon">
-                            <img src="images/icon_5-24_acik_piyasa.svg" class="img-fluid" alt="5/24 Açık Piyasa" />
-                        </div>
-                        <div class="title">
-                            Tüm platformlarda tek şifre
-                        </div>
-                        <div class="description">
-                            Bu piyasa uyumuyor; hafta içi 5 gün 24 saat, günün her anında kaldıraçlı yatırım
-                            işlemleri yapın.
+                            Paranızın 10 katına kadar farklı yatırım araçlarında iki yönlü kaldıraçlı işlemler yapabilirsiniz.
                         </div>
                     </div>
                 </div>
