--- a/src/index.twig
+++ b/src/index.twig
@@ -44,7 +44,7 @@
                         <div class="slider-content">
                             <section class="slider">
                                 <div class="section-title">
-                                    <h2>NASDAQ ve BIST’in Yıldızları ÇarşıFX’te</h2>
+                                    <h2>NASDAQ ve BIST’in Yıldızları ÇARŞIFX’te</h2>
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                                     </p>
@@ -74,7 +74,7 @@
                         <div class="slider-content">
                             <section class="slider">
                                 <div class="section-title">
-                                    <h2>Kripto Paralarda Fırsatları Kaçırmayın ÇarşıFX’le İşlem Yapın</h2>
+                                    <h2>Kripto Paralarda Fırsatları Kaçırmayın ÇARŞIFX’le İşlem Yapın</h2>
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                                     </p>
@@ -93,6 +93,35 @@
             <div class="slider-image" style="background:url('./images/home_banner_3.png') no-repeat;"></div>
         </section>
         <!-- SLIDER 3 ENDS -->
+
+        <!-- SLIDER 4 STARTS -->
+        <section class="content-slider item">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+                        <div class="slider-content">
+                            <section class="slider">
+                                <div class="section-title">
+                                    <h2>BIST 100 YILDIZLARI ÇARŞIFX’DE</h2>
+                                    <p>
+                                        Temel verileri güçlü oldan hisseler yükselmeye ve kazandırmaya devam eder. ÇarşıFX ile en çok kazandıran hisseleri satın alabilirsiniz.
+                                    </p>
+
+                                    <a href="javascript:;" class="btn btn-secondary btn-start-now">Gerçek hesap aç</a>
+                                    <a href="javascript:;" class="btn btn-outline-secondary btn-start-now">Demo hesap aç</a>
+
+                                </div>
+                            </section>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="slider-image" style="background:url('./images/home_banner_4.png') no-repeat;"></div>
+        </section>
+        <!-- SLIDER 4 ENDS -->
 
     </div>
 </section>
@@ -425,7 +454,7 @@
 <section class="section-mobile-actions">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                 <div class="section-title">
                     <h2>Mobilde İşlem Yapın</h2>
                     <p>
