--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -453,6 +453,12 @@
     }
 
   }
+
+  .section-mobile-actions {
+    margin-top: 50px;
+    margin-bottom: 500px;
+  }
+
 }
 
 @media only screen and (max-width: $x-small) {
