FIX: Menu Links Style
Menu links became bolder for better UI

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -30,7 +30,7 @@ header {
       color:$header-nav-color;
       font-family: $base-font-family;
       font-size:$base-font-size;
-      font-weight: normal;
+      font-weight: bold;
       display:inline-block;
       padding:0 20px;
       position:relative;
