ADD: Link Added
Open real account link is added to button

--- a/src/layouts/components/free-membership.twig
+++ b/src/layouts/components/free-membership.twig
@@ -24,7 +24,7 @@
                         Yatırım statejilerinizi gerçek bir kazanca dönüştürmek için şimdi gerçek hesap açın!
                     </p>
 
-                    <a class="btn btn-primary btn-submit" href="javascript:;">Kayıt Ol</a>
+                    <a class="btn btn-primary btn-submit" href="open-real-account.html">Kayıt Ol</a>
 
                 </div>
 
